--- a/src/scss/formula.scss
+++ b/src/scss/formula.scss
@@ -35,8 +35,10 @@
 
     outline: none;
     font-size: 16px;
+    vertical-align: middle;
 
     display: flex;
+    justify-content: flex-start;
     align-items: center;
   }
 
