--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -103,6 +103,9 @@
     border-left: none;
     white-space: nowrap;
 
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     outline: none;
 
     &.selected{
@@ -112,12 +115,13 @@
       overflow: visible;
       z-index: 2;
 
-      &::before{
+      &.selectedCurrent::before{
         content: "";
 
         position: absolute;
 
         background: $color-active;
+        cursor: crosshair;
 
         width: 6px;
         height: 6px;
